--- a/src/main/webapp/source/scripts/modules/registration/components/user-registration-form.template.html
+++ b/src/main/webapp/source/scripts/modules/registration/components/user-registration-form.template.html
@@ -12,7 +12,7 @@
                 <div class="input-group">
                     <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
                     <input type="text" name="username" class="form-control" ng-model="ctrl.data.userName"
-                           placeholder="User Name..." required />
+                           placeholder="User Name" required />
                 </div>
 
                 <div class="alert alert-danger" role="alert"
@@ -32,7 +32,7 @@
                 <div class="input-group">
                     <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
                     <input type="email" name="email" class="form-control" ng-model="ctrl.data.emailId"
-                           placeholder="Email Address..." required />
+                           placeholder="Email Address" required />
                 </div>
                 <div class="alert alert-danger" role="alert"
                      ng-show="ctrl.registrationForm.email.$invalid && ctrl.registrationForm.$submitted">
@@ -56,7 +56,7 @@
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
                             <input type="password" name="password" class="form-control" ng-model="ctrl.data.password"
-                                   placeholder="Password..." ng-minlength="8" required />
+                                   placeholder="Password" ng-minlength="8" required />
                         </div>
                         <div class="alert alert-danger" role="alert"
                              ng-show="ctrl.registrationForm.password.$invalid && ctrl.registrationForm.$submitted">
@@ -80,7 +80,7 @@
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
                             <input type="password" name="confPassword" class="form-control" ng-model="ctrl.data.confPassword"
-                                   placeholder="Confirm Your Password..." ng-minlength="8" required
+                                   placeholder="Password Confirmation" ng-minlength="8" required
                                    mll-input-match="ctrl.data.password" />
                         </div>
                         <div class="alert alert-danger" role="alert"
@@ -112,7 +112,7 @@
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
                             <input type="text" name="firstName" class="form-control" ng-model="ctrl.data.firstName"
-                                   placeholder="First Name..." required />
+                                   placeholder="First Name" required />
                         </div>
                         <div class="alert alert-danger" role="alert"
                              ng-show="ctrl.registrationForm.firstName.$invalid && ctrl.registrationForm.$submitted">
@@ -133,7 +133,7 @@
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
                             <input type="text" name="lastName" class="form-control" ng-model="ctrl.data.lastName"
-                                   placeholder="Last Name..."  required />
+                                   placeholder="Last Name"  required />
                         </div>
                         <div class="alert alert-danger" role="alert"
                              ng-show="ctrl.registrationForm.lastName.$invalid && ctrl.registrationForm.$submitted">
@@ -153,7 +153,7 @@
                      ng-class="{ 'has-success': ctrl.registrationForm.age.$valid && ctrl.registrationForm.$submitted,
                                  'has-error': ctrl.registrationForm.age.$invalid && ctrl.registrationForm.$submitted }">
                     <div class="col-xs-12">
-                        <input type="number" name="age" class="form-control"
+                        <input type="number" name="age" class="form-control" placeholder="Age"
                                ng-model="ctrl.data.age" required min="1" max="100" />
                         <div class="alert alert-danger" role="alert"
                              ng-show="ctrl.registrationForm.age.$invalid && ctrl.registrationForm.$submitted">
@@ -175,8 +175,8 @@
                                  'has-error': ctrl.registrationForm.gender.$invalid && ctrl.registrationForm.$submitted }">
                     <div class="col-xs-12">
                         <select name="gender" class="form-control" ng-model="ctrl.data.gender"
-                                ng-options="gender for gender in genders "required>
-                            <option value="">Select Gender...</option>
+                                ng-options="gender for gender in ctrl.genders" required>
+                            <option value="">Gender</option>
                         </select>
                         <div class="alert alert-danger" role="alert"
                              ng-show="ctrl.registrationForm.gender.$invalid && ctrl.registrationForm.$submitted">
@@ -197,8 +197,8 @@
                                  'has-error': ctrl.registrationForm.college.$invalid && ctrl.registrationForm.$submitted }">
                     <div class="col-xs-12">
                         <select name="college" class="form-control" ng-model="ctrl.data.college"
-                                ng-options="college for college in colleges" required>
-                            <option value="">Select Your College...</option>
+                                ng-options="college for college in ctrl.colleges" required>
+                            <option value="">College/School</option>
                         </select>
                         <div class="alert alert-danger" role="alert"
                              ng-show="ctrl.registrationForm.college.$invalid && ctrl.registrationForm.$submitted">
@@ -217,8 +217,8 @@
                                  'has-error': ctrl.registrationForm.level.$invalid && ctrl.registrationForm.$submitted }">
                     <div class="col-xs-12">
                         <select name="level" class="form-control" ng-model="ctrl.data.level"
-                                ng-options="affiliation for affiliation in affiliations" required>
-                            <option value="">Select Your University Affiliation...</option>
+                                ng-options="affiliation for affiliation in ctrl.affiliations" required>
+                            <option value="">University Affiliation</option>
                         </select>
                         <div class="alert alert-danger" role="alert"
                              ng-show="ctrl.registrationForm.level.$invalid && ctrl.registrationForm.$submitted">
@@ -238,7 +238,7 @@
             <div class="col-xs-10 col-xs-offset-1">
                 <select name="preference" class="form-control" ng-model="ctrl.data.preference"
                         ng-options="genre for genre in ctrl.genres" required>
-                    <option value="">Select Your Preferable Genre...</option>
+                    <option value="">Preferable Genre</option>
                 </select>
 
                 <div class="alert alert-danger" role="alert"
