--- a/src/main/webapp/source/scripts/modules/registration/components/user-registration-form.template.html
+++ b/src/main/webapp/source/scripts/modules/registration/components/user-registration-form.template.html
@@ -238,7 +238,7 @@
             <div class="col-xs-10 col-xs-offset-1">
                 <select name="preference" class="form-control" ng-model="ctrl.data.preference"
                         ng-options="genre for genre in ctrl.genres" required>
-                    <option value="">Preferable Genre</option>
+                    <option value="">Preferred Genre</option>
                 </select>
 
                 <div class="alert alert-danger" role="alert"
