Upload Fixes; Login Fixes;

--- a/src/main/webapp/source/scripts/modules/login/components/common-login-form.template.html
+++ b/src/main/webapp/source/scripts/modules/login/components/common-login-form.template.html
@@ -1,6 +1,6 @@
 <div>
     <div class="col-xs-10 col-xs-offset-1 well">
-        <h3 class="text-center no-margin">Registration</h3>
+        <h3 class="text-center no-margin">Login</h3>
     </div>
 
     <form name="ctrl.loginForm" class="form-horizontal" novalidate>
