--- a/src/main/webapp/source/scripts/modules/upload/components/music-file-uploader.template.html
+++ b/src/main/webapp/source/scripts/modules/upload/components/music-file-uploader.template.html
@@ -1,5 +1,5 @@
 <div>
-    <uib-tabset active="ctrl.forms.current" justified="true" type="pills">
+    <uib-tabset active="ctrl.forms.currentId" justified="true" type="pills">
         <uib-tab index="0" heading="{{ctrl.forms.data[0].title}}" disable="true">
             <mll-music-agreement-form on-next="ctrl.next()"></mll-music-agreement-form>
         </uib-tab>
