--- a/src/main/webapp/source/scripts/modules/picker/components/file-selector.template.html
+++ b/src/main/webapp/source/scripts/modules/picker/components/file-selector.template.html
@@ -4,6 +4,6 @@
     <mll-dropbox-file-reader formats="ctrl.formats" on-select="ctrl.selectDropbox(fileInformation)"></mll-dropbox-file-reader>
 
     <div class="form-group">
-        <input typ="text" class="form-control" ng-model="ctrl.selectedFile" placeholder="Selected File..." disabled>
+        <input typ="text" class="form-control" ng-model="ctrl.selectedFile" placeholder="Selected File" disabled>
     </div>
 </div>
