--- a/src/main/webapp/source/scripts/modules/shared/components/scrollable-agreement.template.html
+++ b/src/main/webapp/source/scripts/modules/shared/components/scrollable-agreement.template.html
@@ -2,7 +2,7 @@
     <div class="agreement__document" ng-transclude></div>
     <div class="text-center">
         <label>
-            <div class="agreement__checkbox-wrapper"uib-tooltip="Please, read the agreement!"
+            <div class="agreement__checkbox-wrapper"uib-tooltip="Please, read the agreement till the end!"
                  tooltip-placement="top"
                  tooltip-enable="!ctrl.isScrolled">
                 <input type="checkbox" ng-disabled="!ctrl.isScrolled" ng-model="ctrl.isChecked"
