--- a/src/main/webapp/source/styles/styles.css
+++ b/src/main/webapp/source/styles/styles.css
@@ -86,3 +86,8 @@ html, body {
 .tooltip.tooltip-alert-error .tooltip-arrow {
     background-color: #f2dede;
 }
+
+.form-group .control-label:after {
+    content:"*";
+    color:red;
+}
