--- a/src/main/webapp/source/scripts/modules/upload/components/music-general-information-form.template.html
+++ b/src/main/webapp/source/scripts/modules/upload/components/music-general-information-form.template.html
@@ -3,7 +3,7 @@
     <div class="form-group has-feedback"
          ng-class="{ 'has-success': ctrl.generalForm.title.$valid && ctrl.generalForm.$submitted,
                      'has-error': ctrl.generalForm.title.$invalid && ctrl.generalForm.$submitted }">
-        <label for="general-title" class="col-xs-2 control-label">
+        <label for="general-title" class="col-xs-2 asterisk-label">
             Song Title
         </label>
         <div class="col-xs-10">
@@ -26,7 +26,7 @@
             <div class="form-group has-feedback"
                  ng-class="{ 'has-success': artistForm.artist.$valid && ctrl.generalForm.$submitted,
                              'has-error': artistForm.artist.$invalid && ctrl.generalForm.$submitted }">
-                <label class="col-xs-2">Artist&nbsp;<span ng-show="$index">#{{$index + 1}}</span></label>
+                <label class="col-xs-2 asterisk-label">Artist&nbsp;<span ng-show="$index">#{{$index + 1}}</span></label>
                 <div class="col-xs-8">
                     <input type="text" name="artist" class="form-control" ng-model="artist.name" required />
                     <div class="alert alert-danger" role="alert"
@@ -54,7 +54,7 @@
     <div class="form-group has-feedback"
          ng-class="{ 'has-success': ctrl.generalForm.beatRate.$valid && ctrl.generalForm.$submitted,
                      'has-error': ctrl.generalForm.beatRate.$invalid && ctrl.generalForm.$submitted }">
-        <label for="beat-rate" class="col-xs-2">
+        <label for="beat-rate" class="col-xs-2 asterisk-label">
             Beat Rate/Minute
         </label>
         <div class="col-xs-10">
@@ -79,7 +79,7 @@
     <div class="form-group has-feedback"
          ng-class="{ 'has-success': ctrl.generalForm.agreement.$valid && ctrl.generalForm.$submitted,
                      'has-error': ctrl.generalForm.agreement.$invalid && ctrl.generalForm.$submitted }">
-        <label  class="col-xs-2">
+        <label  class="col-xs-2 asterisk-label">
             Any Written Agreements <span class="glyphicon glyphicon-question-sign" uib-tooltip="Licenses, etc."></span>
         </label>
         <div class="col-xs-10">
@@ -91,21 +91,21 @@
                 <input type="radio" name="agreement" ng-model="ctrl.data.agreement" ng-value="false" required>
                 <span>No</span>
             </label>
-        </div>
 
-        <div class="alert alert-danger" role="alert"
-             ng-show="ctrl.generalForm.agreement.$invalid && ctrl.generalForm.$submitted">
-            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            <div class="alert alert-danger" role="alert"
+                 ng-show="ctrl.generalForm.agreement.$invalid && ctrl.generalForm.$submitted">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                 <span ng-show="ctrl.generalForm.agreement.$error.required">
                     Please, specify whether you have any additional agreements or no!
                 </span>
+            </div>
         </div>
     </div>
 
     <div class="form-group has-feedback"
          ng-class="{ 'has-success': ctrl.generalForm.primaryGenre.$valid && ctrl.generalForm.$submitted,
                      'has-error': ctrl.generalForm.primaryGenre.$invalid && ctrl.generalForm.$submitted }">
-        <label class="col-xs-2">
+        <label class="col-xs-2 asterisk-label">
             Primary Genre
         </label>
         <div class="col-xs-10">
