--- a/src/main/webapp/source/scripts/modules/upload/components/music-file-form.template.html
+++ b/src/main/webapp/source/scripts/modules/upload/components/music-file-form.template.html
@@ -5,7 +5,7 @@
             <mll-file-selector formats="ctrl.formats" on-select-hdd="ctrl.selectHdd(fileInformation)"
                                on-select-dropbox="ctrl.selectDropbox(fileInformation)"></mll-file-selector>
 
-            <div class="form-control">
+            <div class="form-group">
                 <input typ="text" class="form-control" ng-model="data.file.name" placeholder="Selected File" disabled>
             </div>
 
