--- a/src/main/webapp/source/scripts/modules/upload/components/music-file-form.template.html
+++ b/src/main/webapp/source/scripts/modules/upload/components/music-file-form.template.html
@@ -6,7 +6,7 @@
                                on-select-dropbox="ctrl.selectDropbox(fileInformation)"></mll-file-selector>
 
             <div class="form-group">
-                <input typ="text" class="form-control" ng-model="data.file.name" placeholder="Selected File" disabled>
+                <input typ="text" class="form-control" ng-model="ctrl.data.file.name" placeholder="Selected File" disabled>
             </div>
 
             <div class=" form-group alert alert-danger" role="alert" ng-show="ctrl.form.invalid && ctrl.form.submitted">
@@ -32,6 +32,4 @@
             <button class="btn btn-block btn-primary" ng-click="ctrl.submit()">Next</button>
         </div>
     </div>
-
-    {{ ctrl.data || json }}
 </form>
