--- a/src/main/webapp/source/scripts/components/app.template.html
+++ b/src/main/webapp/source/scripts/components/app.template.html
@@ -21,7 +21,9 @@
 
     <footer class="app__footer">
         <div class="container">
-            Northeastern University, 2016
+            <div class="text-center">
+                <h3>Northeastern University, 2016</h3>
+            </div>
         </div>
     </footer>
 </div>
