--- a/src/main/webapp/source/scripts/modules/header/components/header.template.html
+++ b/src/main/webapp/source/scripts/modules/header/components/header.template.html
@@ -28,7 +28,7 @@
                 <ul class="nav navbar-nav"
                     ng-show="ctrl.authService.details.isAuth && ctrl.authService.details.data.permissions.upload">
                     <li>
-                        <a ng-click="ctrl.upload()">
+                        <a ui-sref="ctrl.uploadLink.href">
                             <span ng-bind="ctrl.uploadLink.text"></span>
                         </a>
                     </li>
@@ -51,6 +51,6 @@
         </div>
     </nav>
     <div class="container">
-        <img src="./fonts/gll-logo.jpg" />
+        <img src="dist/fonts/gll-logo.jpg" />
     </div>
 </header>
