--- a/src/main/webapp/source/scripts/modules/header/components/header.template.html
+++ b/src/main/webapp/source/scripts/modules/header/components/header.template.html
@@ -52,10 +52,10 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-4">
-                <img src="dist/fonts/gll-logo.jpg" class="img-responsive" />
+            <div class="col-xs-12 col-sm-3 col-sm-offset-1">
+                <img src="dist/fonts/gll-logo.jpg" class="img-responsive center-block" />
             </div>
-            <div class="col-xs-12 col-sm-8">
+            <div class="col-xs-12 col-sm-7">
                 <h2>
                     <span>Green Line Licensing</span>
                     <br>
