--- a/src/main/webapp/source/styles/styles.css
+++ b/src/main/webapp/source/styles/styles.css
@@ -13,10 +13,12 @@ html, body {
 .app__header {
     margin-bottom: 20px;
     border-bottom: 1px solid #e7e7e7;
+    padding-bottom: 20px;
 }
 
 .app__footer {
     background-color: #f5f5f5;
+    border-top: 1px solid #e7e7e7;
 }
 
 .app__main {
